# verityai

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  data_access.py  main.py  redis.py
app/migrations/: env.py
app/sentiments/: analyzer.py  data_access.py  models.py  router.py  schemas.py
app/summaries/: models.py  router.py  schemas.py
app/users/: auth.py  data_access.py  dependencies.py  models.py  router.py  schemas.py
