[project]
name = "verityai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "celery>=5.5.3",
    "fastapi>=0.121.0",
    "fastapi-limiter>=0.1.6",
    "matplotlib>=3.10.7",
    "ollama>=0.6.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.4",
    "python-jose>=3.5.0",
    "razdel>=0.5.0",
    "redis>=7.1.0",
    "safir[redis]>=4.3.0",
    "scipy>=1.16.3",
    "spacy>=3.8.8",
    "sqlalchemy>=2.0.44",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
